fix alignment on mobile

--- a/components/Footer.module.css
+++ b/components/Footer.module.css
@@ -11,3 +11,10 @@
   height: 3em;
   margin: 5px;
 }
+
+.title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
